--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "keywords": [],
   "devDependencies": {
+    "@types/react-dom": "^18.0.11",
     "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
